
[project]
name = "image-server"
version = "0.1.0"
description = "FastAPI server running image models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "pillow>=12.0.0",
    "diffusers>=0.35.2",
    "transformers>=4.57.1",
    "accelerate>=1.10.1",
    "safetensors>=0.6.2",
    "huggingface-hub>=0.35.3",
    "protobuf>=6.33.0",
    "sentencepiece>=0.2.1",
    "peft>=0.17.1",
]

[tool.uv]
# uv-specific settings can go here if needed

[project.scripts]
# Convenience runner: uv run runserver
runserver = "app.__main__:main"
